--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="organization point">
-                    <h3 class="main-title"> Comunity </h3>
+                    <h3 class="main-title"> Community </h3>
                     <ul>
                         <li>
                             <i class="fa fa-group"></i>KITS - Leader & Trainer <br> (2019 - Now)
@@ -225,7 +225,7 @@
                             Participant of Binar Academy - Devop Engineering - April 2023</a>
                         </li>
                         <li class="il-certif">
-                            <a href="https://www.credly.com/badges/82d7e886-1b55-4acb-9b8f-46e2b1e838be/">
+                            <a href="https://www.credly.com/badges/82d7e886-1b55-4acb-9b8f-46e2b1e838be/" target="_blank">
                                 Google Certification IT Support - December 2022
                             </a>
                         </li>
